--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "@google-cloud/storage": "^7.11.2",
     "axios": "^1.7.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "cors": "^2.8.5",
-    "multer": "^1.4.4",
     "mongodb": "^6.5.0",
-    "nodemon": "^3.1.0"
+    "multer": "^1.4.4",
+    "nodemon": "^3.1.0",
+    "supertokens-node": "^19.0.1"
   },
   "type": "module"
 }
