--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "form-data": "^4.0.0",
     "mongodb": "^6.5.0",
     "multer": "^1.4.4",
     "nodemon": "^3.1.0",
+    "serpapi": "^2.1.0",
     "supertokens-node": "^19.0.1"
   },
   "type": "module"
